# starfish-media-pipeline-api

./: CMakeLists.txt  README.md
include/: Acb.h  StarfishMediaAPIs.h
include/Acb/: Acb.h
include/playerAPIs/: StarfishMediaAPIs.h
sample/: CMakeLists.txt
sample/src/: DirectMediaPlayer.h  SDL_webOS.c  StarfishDirectMediaPlayer.cpp  StarfishDirectMediaPlayer.h  StarfishDirectMediaPlayer_API.cpp  StarfishDirectMediaPlayer_C.h  acb_sample.cpp  main.c
samples/: CMakeLists.txt
samples/gst-sdl/: CMakeLists.txt
samples/gst-sdl/src/: DirectMediaPlayer.h  SDL_webOS.h  StarfishDirectMediaPlayer.cpp  StarfishDirectMediaPlayer.h  acb_sample.cpp  gst_sample.c  gst_sample.h  main.c
src/: StarfishMediaAPIs_stub.cpp
